# PYRO

./: .gitignore  Dockerfile  README.md  app.py  config.py  pyproject.toml  resources.py  services.py
ressources/: textract.py
services/: file_storage.py  find_dates.py  image_to_text.py
